# vehicle-cost-calculator

./: .gitignore  README.md  build.py  pyproject.toml  wrangler.jsonc
data/: aggregates.json  cars_aggregates.json  stage3_gdansk_investments.json  stage3_gdansk_transport.json
src/: depreciation.py  social_cost.py  stage3.py  tco.py  ui.py
tests/: test_depreciation.py  test_social_cost.py  test_stage3.py  test_tco.py
worker/: index.js
