[project]
name = "mobility-cost-pl"
version = "0.1.0"
description = "Static site modelling the personal & public cost of road vehicles in Poland."
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
